--- a/package.json
+++ b/package.json
@@ -3,11 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-runtime": "^6.18.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
+    "normalize.css": "^5.0.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-icons": "^2.2.1",
+    "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^1.0.0",
+    "redux-json-api": "^1.6.2",
+    "redux-thunk": "^2.1.0",
+    "semantic-ui-css": "^2.2.4",
+    "semantic-ui-react": "https://registry.npmjs.org/semantic-ui-react/-/semantic-ui-react-0.61.7.tgz"
   },
   "scripts": {
     "start": "react-scripts start",
