--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
+    "redux-form": "^6.2.1",
     "redux-json-api": "^1.6.2",
     "redux-thunk": "^2.1.0",
     "semantic-ui-css": "^2.2.4",
