--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "normalize.css": "^5.0.0",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
+    "react-datepicker": "^0.37.0",
     "react-dom": "^15.4.1",
     "react-icons": "^2.2.1",
+    "react-modules": "^1.0.8",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-scripts": "https://registry.npmjs.org/react-scripts/-/react-scripts-0.7.0.tgz",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
     "redux-form": "^6.2.1",
-    "redux-json-api": "^1.6.2",
+    "redux-json-api": "https://registry.npmjs.org/redux-json-api/-/redux-json-api-1.6.2.tgz",
     "redux-thunk": "^2.1.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "https://registry.npmjs.org/semantic-ui-react/-/semantic-ui-react-0.61.7.tgz"
