--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "immutable": "^3.8.1",
     "normalize.css": "^5.0.0",
     "react": "^15.4.1",
