--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "smart-task",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "6.9.1",
+    "npm": "^4.0.0"
+  },
   "devDependencies": {
     "babel-runtime": "^6.18.0",
     "less": "^2.7.1",
