--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
     "redux-form": "^6.2.1",
-    "redux-json-api": "https://registry.npmjs.org/redux-json-api/-/redux-json-api-1.6.2.tgz",
+    "redux-json-api": "https://github.com/valikos/redux-json-api/tarball/smart-task-api",
     "redux-thunk": "^2.1.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "https://registry.npmjs.org/semantic-ui-react/-/semantic-ui-react-0.61.7.tgz"
