--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
     "redux-form": "^6.4.3",
-    "redux-json-api": "https://github.com/valikos/redux-json-api/tarball/smart-task-api",
+    "redux-json-api": "^1.7.0",
     "redux-thunk": "^2.1.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "https://registry.npmjs.org/semantic-ui-react/-/semantic-ui-react-0.61.7.tgz"
