--- a/package.json
+++ b/package.json
@@ -7,37 +7,38 @@
     "npm": "^4.0.0"
   },
   "devDependencies": {
-    "babel-runtime": "^6.18.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "react-scripts": "0.7.0"
+    "react-scripts": "0.8.5"
   },
   "dependencies": {
     "dotenv": "^2.0.0",
     "immutable": "^3.8.1",
     "normalize.css": "^5.0.0",
-    "react": "^15.4.1",
+    "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.1",
     "react-datepicker": "^0.37.0",
-    "react-dom": "^15.4.1",
+    "react-dom": "^15.4.2",
     "react-icons": "^2.2.1",
     "react-modules": "^1.0.8",
     "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
-    "react-scripts": "https://registry.npmjs.org/react-scripts/-/react-scripts-0.7.0.tgz",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
-    "redux-form": "^6.4.3",
+    "redux-form": "^6.5.0",
     "redux-json-api": "^1.7.0",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.4",
-    "semantic-ui-react": "https://registry.npmjs.org/semantic-ui-react/-/semantic-ui-react-0.61.7.tgz"
+    "semantic-ui-react": "^0.64.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "Smart Task to improve your process",
+  "main": "index.js",
+  "repository": "git@github.com:valikos/smart-task-react.git",
+  "author": "Valentyn Ostakh <valikos.ost@gmail.com>",
+  "license": "MIT"
 }
