--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "^4.0.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.0"
+    "react-scripts": "0.9.3"
   },
   "dependencies": {
     "dotenv": "^2.0.0",
@@ -23,6 +23,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-actions": "^1.2.1",
     "redux-devtools-extension": "^1.0.0",
     "redux-form": "^6.5.0",
     "redux-json-api": "^1.7.0",
